# BridgeCLIP-japanese

./: .gitignore  README.md  ckpt_loader.py  eval_retrieval.py  eval_retrieval_baseline.py  pick_best_ckpt.py  pyproject.toml  run_eval_best_3gpu_queue_en.sh  run_eval_best_4gpu_queue.sh  run_eval_best_4gpu_queue_en.sh  run_sweep_3gpu_queue_en.sh  run_sweep_4gpu_queue.sh  run_sweep_4gpu_queue_en.sh  run_sweep_single_gpu_en.sh
Pretreatment/: apply_translation.py  build_labeled_en_csv.py  build_two_csvs_from_texts_complete.py  image_check.py  translate_texts.py
classification/: README.md  RUNBOOK_EN.md  evaluate.py  evaluate_en.py  make_subsets_en.sh  plot_confusion_matrices.py  plot_confusion_matrices_en.py  predict_top1.py  prompts.py  prompts_en.py  prompts_unified.py  qualitative_comparison.py  qualitative_retrieval.py  retrain_clip_short.sh  retrain_clip_short_en.sh  retrieval_eval.py  run_all_classifiers.sh  run_all_classifiers_parallel.sh  run_all_classifiers_parallel_en.sh  run_all_classifiers_parallel_en_3gpu.sh  run_clip_base_knn.sh  run_clip_classifier_parallel.sh  run_clip_classifier_parallel_en.sh  run_clip_classifier_parallel_en_3gpu.sh  run_clip_textdot.sh  run_clip_textdot_en.sh  run_vlm.py  train.py  train_clip.sh
classification/data/: convert_labels_to_en.py  dataset.py  extract_labels.py  label_definitions.py  label_definitions_en.py  labels.py
classification/models/: clip_classifier.py  clip_finetuned_knn.py  clip_zeroshot.py  clip_zeroshot_en.py  gpt4o.py  gpt4o_en.py  internvl.py  internvl_en.py  llama.py  llama_en.py  qwen3vl.py  qwen3vl_en.py  (+4 more)
