[project]
name = "clip-training-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "braceexpand>=0.1.7",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "huggingface-hub>=1.5.0",
    "matplotlib>=3.10.8",
    "open-clip-torch",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "qwen-vl-utils>=0.0.14",
    "regex>=2026.2.19",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.25",
    "tqdm>=4.67.3",
    "transformers>=4.52.0",
    "webdataset>=1.0.2",
]

[tool.uv.sources]
open-clip-torch = { git = "https://github.com/mlfoundations/open_clip.git" }
